// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineChart should base render correctly 1`] = `
<DocumentFragment>
  <div
    style="display: flex; justify-content: center; padding: 2rem;"
  >
    <div
      style="width: 100%; max-width: 1000px;"
    >
      <div
        style="width: 100%; height: 100%;"
      >
        <div
          class="linechart-container"
          style="display: grid; grid-template-areas: 'chart yaxis' 'xaxis .' 'context .'; grid-template-rows: 1fr auto auto; grid-template-columns: 1fr auto auto; height: 100%;"
        >
          <div
            class="lines-container"
            style="grid-area: chart; display: flex; flex-direction: column; height: 100%;"
          >
            <svg
              height="300"
              width="950"
            >
              <g
                height="300"
                width="950"
              >
                <clippath
                  id="clip-path-950-300-Series-1-0-ALL"
                >
                  <rect
                    fill="none"
                    height="300"
                    width="950"
                  />
                </clippath>
                <g
                  clip-path="url(#clip-path-950-300-Series-1-0-ALL)"
                >
                  <path
                    class="line"
                    data-testid="Line-Series-1"
                    style="stroke: steelblue; stroke-width: 1px; stroke-opacity: 1; fill: none; display: inherit;"
                  />
                </g>
              </g>
              <rect
                fill="none"
                height="300"
                pointer-events="all"
                width="950"
              />
            </svg>
          </div>
          <div
            class="y-axis-container"
            style="grid-area: yaxis; display: flex; flex-direction: column;"
          >
            <svg
              height="300"
              width="50"
            >
              <g
                class="axis-y axis-y-Series-1"
                cursor="move"
                transform="translate(0, 0)"
              >
                <g
                  class="axis y-axis"
                  data-testid="yAxis-Series-1"
                  fill="none"
                  font-size="14"
                  stroke-width="2"
                  text-anchor="start"
                >
                  <path
                    d="M6,299H1V1H6"
                    stroke="steelblue"
                  />
                  <g
                    opacity="1"
                    transform="translate(0, 300)"
                  >
                    <line
                      stroke="steelblue"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="steelblue"
                      x="9"
                      y="1"
                    >
                      0
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(0, 240)"
                  >
                    <line
                      stroke="steelblue"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="steelblue"
                      x="9"
                      y="1"
                    >
                      0.2
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(0, 180)"
                  >
                    <line
                      stroke="steelblue"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="steelblue"
                      x="9"
                      y="1"
                    >
                      0.4
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(0, 120)"
                  >
                    <line
                      stroke="steelblue"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="steelblue"
                      x="9"
                      y="1"
                    >
                      0.6
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(0, 59.999999999999986)"
                  >
                    <line
                      stroke="steelblue"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="steelblue"
                      x="9"
                      y="1"
                    >
                      0.8
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(0, 0)"
                  >
                    <line
                      stroke="steelblue"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="steelblue"
                      x="9"
                      y="1"
                    >
                      1
                    </text>
                  </g>
                </g>
                <rect
                  fill="none"
                  height="300"
                  pointer-events="all"
                  width="50"
                />
              </g>
            </svg>
          </div>
          <div
            class="x-axis-container"
            style="grid-area: xaxis; display: flex; flex-direction: row; width: 100%;"
          >
            <div
              style="width: 100%;"
            >
              <svg
                height="50"
                style="width: 100%; display: block;"
                width="950"
              >
                <g
                  class="axis x-axis"
                  data-testid="xAxis"
                  fill="none"
                  font-size="14"
                  stroke-width="2"
                  text-anchor="middle"
                >
                  <path
                    d="M1,6V1H949V6"
                    stroke="black"
                  />
                  <g
                    opacity="1"
                    transform="translate(0, 0)"
                  >
                    <line
                      stroke="black"
                      x1="1"
                      x2="1"
                      y2="6"
                    />
                    <text
                      class="tick-value"
                      dy="0.71em"
                      fill="black"
                      x="1"
                      y="9"
                    >
                      01:00
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(85.5, 0)"
                  >
                    <line
                      stroke="black"
                      x1="1"
                      x2="1"
                      y2="6"
                    />
                    <text
                      class="tick-value"
                      dy="0.71em"
                      fill="black"
                      x="1"
                      y="9"
                    >
                      01:15
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(171, 0)"
                  >
                    <line
                      stroke="black"
                      x1="1"
                      x2="1"
                      y2="6"
                    />
                    <text
                      class="tick-value"
                      dy="0.71em"
                      fill="black"
                      x="1"
                      y="9"
                    >
                      01:30
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(256.5, 0)"
                  >
                    <line
                      stroke="black"
                      x1="1"
                      x2="1"
                      y2="6"
                    />
                    <text
                      class="tick-value"
                      dy="0.71em"
                      fill="black"
                      x="1"
                      y="9"
                    >
                      01:45
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(342, 0)"
                  >
                    <line
                      stroke="black"
                      x1="1"
                      x2="1"
                      y2="6"
                    />
                    <text
                      class="tick-value"
                      dy="0.71em"
                      fill="black"
                      x="1"
                      y="9"
                    >
                      02:00
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(427.5, 0)"
                  >
                    <line
                      stroke="black"
                      x1="1"
                      x2="1"
                      y2="6"
                    />
                    <text
                      class="tick-value"
                      dy="0.71em"
                      fill="black"
                      x="1"
                      y="9"
                    >
                      02:15
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(513, 0)"
                  >
                    <line
                      stroke="black"
                      x1="1"
                      x2="1"
                      y2="6"
                    />
                    <text
                      class="tick-value"
                      dy="0.71em"
                      fill="black"
                      x="1"
                      y="9"
                    >
                      02:30
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(598.5, 0)"
                  >
                    <line
                      stroke="black"
                      x1="1"
                      x2="1"
                      y2="6"
                    />
                    <text
                      class="tick-value"
                      dy="0.71em"
                      fill="black"
                      x="1"
                      y="9"
                    >
                      02:45
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(684, 0)"
                  >
                    <line
                      stroke="black"
                      x1="1"
                      x2="1"
                      y2="6"
                    />
                    <text
                      class="tick-value"
                      dy="0.71em"
                      fill="black"
                      x="1"
                      y="9"
                    >
                      03:00
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(769.5, 0)"
                  >
                    <line
                      stroke="black"
                      x1="1"
                      x2="1"
                      y2="6"
                    />
                    <text
                      class="tick-value"
                      dy="0.71em"
                      fill="black"
                      x="1"
                      y="9"
                    >
                      03:15
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(855, 0)"
                  >
                    <line
                      stroke="black"
                      x1="1"
                      x2="1"
                      y2="6"
                    />
                    <text
                      class="tick-value"
                      dy="0.71em"
                      fill="black"
                      x="1"
                      y="9"
                    >
                      03:30
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(940.5, 0)"
                  >
                    <line
                      stroke="black"
                      x1="1"
                      x2="1"
                      y2="6"
                    />
                    <text
                      class="tick-value"
                      dy="0.71em"
                      fill="black"
                      x="1"
                      y="9"
                    >
                      03:45
                    </text>
                  </g>
                </g>
                <rect
                  fill="none"
                  height="50"
                  pointer-events="all"
                  width="950"
                />
              </svg>
            </div>
          </div>
          <div
            style="grid-area: spacer;"
          />
          <div
            class="context-container"
            style="grid-area: context; display: flex; flex-direction: column;"
          >
            <div
              style="width: 100%;"
            >
              <svg
                height="50"
                style="width: 100%; display: block;"
                width="950"
              >
                <g
                  height="100"
                  width="950"
                >
                  <clippath
                    id="clip-path-950-100-"
                  >
                    <rect
                      fill="none"
                      height="100"
                      width="950"
                    />
                  </clippath>
                </g>
                <g
                  fill="none"
                  stroke="#777"
                >
                  <rect
                    class="before-selection"
                    fill="#777"
                    fill-opacity="0.3"
                    height="100"
                    shape-rendering="crispEdges"
                    stroke="#fff"
                    width="0"
                    x="0"
                    y="0"
                  />
                  <rect
                    class="after-selection"
                    fill="#777"
                    fill-opacity="0.3"
                    height="100"
                    shape-rendering="crispEdges"
                    stroke="#fff"
                    width="0"
                    x="950"
                    y="0"
                  />
                  <rect
                    class="overlay"
                    cursor="crosshair"
                    fill="none"
                    height="100"
                    pointer-events="all"
                    width="950"
                    x="0"
                    y="0"
                  />
                  <rect
                    class="selection"
                    cursor="move"
                    fill="none"
                    fill-opacity="0.3"
                    height="100"
                    pointer-events="all"
                    shape-rendering="crispEdges"
                    width="950"
                    x="0"
                    y="0"
                  />
                  <path
                    class="handle handle--west"
                    d="M 0 0 V 100"
                    stroke="#333"
                    stroke-width="2"
                  />
                  <rect
                    class="handle-target handle-target--west"
                    cursor="ew-resize"
                    fill="none"
                    height="100"
                    pointer-events="all"
                    stroke="none"
                    width="10"
                    x="-5"
                    y="0"
                  />
                  <circle
                    class="handle-target handle-target--west"
                    cursor="ew-resize"
                    cx="-1"
                    cy="25"
                    fill="#333"
                    pointer-events="all"
                    r="8"
                    stroke="#333"
                    stroke-width="2"
                  />
                  <circle
                    class="handle-target handle-target--east"
                    cursor="ew-resize"
                    cx="949"
                    cy="25"
                    fill="#333"
                    pointer-events="all"
                    r="8"
                    stroke="#333"
                    stroke-width="2"
                  />
                  <path
                    class="handle handle--east"
                    d="M 950 0 V 100"
                    stroke="#333"
                    stroke-width="2"
                  />
                  <rect
                    class="handle-target handle-target--east"
                    cursor="ew-resize"
                    fill="none"
                    height="100"
                    pointer-events="all"
                    stroke="none"
                    width="10"
                    x="945"
                    y="0"
                  />
                </g>
              </svg>
              <div
                style="width: 100%;"
              >
                <svg
                  height="50"
                  style="width: 100%; display: block;"
                  width="1"
                >
                  <g
                    class="axis x-axis"
                    data-testid="xAxis"
                    fill="none"
                    font-size="14"
                    stroke-width="2"
                    text-anchor="middle"
                  >
                    <path
                      d="M1,6V1H0V6"
                      stroke="black"
                    />
                    <g
                      opacity="1"
                      transform="translate(0.72, 0)"
                    >
                      <line
                        stroke="black"
                        x1="1"
                        x2="1"
                        y2="6"
                      />
                      <text
                        class="tick-value"
                        dy="0.71em"
                        fill="black"
                        x="1"
                        y="9"
                      >
                        03:00
                      </text>
                    </g>
                  </g>
                  <rect
                    fill="none"
                    height="50"
                    pointer-events="all"
                    width="1"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LineChart should render multiple series correctly 1`] = `
<DocumentFragment>
  <div
    style="display: flex; justify-content: center; padding: 2rem;"
  >
    <div
      style="width: 100%; max-width: 1000px;"
    >
      <div
        style="width: 100%; height: 100%;"
      >
        <div
          class="linechart-container"
          style="display: grid; grid-template-areas: 'chart yaxis' 'xaxis .' 'context .'; grid-template-rows: 1fr auto auto; grid-template-columns: 1fr auto auto; height: 100%;"
        >
          <div
            class="lines-container"
            style="grid-area: chart; display: flex; flex-direction: column; height: 100%;"
          >
            <svg
              height="300"
              width="850"
            >
              <g
                height="300"
                width="850"
              >
                <clippath
                  id="clip-path-850-300-Series-1-0-ALL/Series-2-0-ALL/Series-3-0-ALL"
                >
                  <rect
                    fill="none"
                    height="300"
                    width="850"
                  />
                </clippath>
                <g
                  clip-path="url(#clip-path-850-300-Series-1-0-ALL/Series-2-0-ALL/Series-3-0-ALL)"
                >
                  <path
                    class="line"
                    d="M0,150L3.4,146.41L6.8,142.822L10.2,139.238L13.6,135.661L17,132.094L20.4,128.538L23.8,124.995L27.2,121.468L30.6,117.959L34,114.47L37.4,111.004L40.8,107.562L44.2,104.147L47.6,100.761L51,97.407L54.4,94.085L57.8,90.799L61.2,87.55L64.6,84.341L68,81.173L71.4,78.048L74.8,74.969L78.2,71.938L81.6,68.955L85,66.024L88.4,63.146L91.8,60.323L95.2,57.556L98.6,54.848L102,52.2L105.4,49.614L108.8,47.091L112.2,44.633L115.6,42.241L119,39.918L122.4,37.664L125.8,35.481L129.2,33.371L132.6,31.334L136,29.372L139.4,27.487L142.8,25.678L146.2,23.948L149.6,22.298L153,20.729L156.4,19.241L159.8,17.836L163.2,16.514L166.6,15.276L170,14.124L173.4,13.058L176.8,12.077L180.2,11.185L183.6,10.379L187,9.662L190.4,9.034L193.8,8.494L197.2,8.044L200.6,7.684L204,7.413L207.4,7.233L210.8,7.143L214.2,7.143L217.6,7.233L221,7.413L224.4,7.684L227.8,8.044L231.2,8.494L234.6,9.034L238,9.662L241.4,10.379L244.8,11.185L248.2,12.077L251.6,13.058L255,14.124L258.4,15.276L261.8,16.514L265.2,17.836L268.6,19.241L272,20.729L275.4,22.298L278.8,23.948L282.2,25.678L285.6,27.487L289,29.372L292.4,31.334L295.8,33.371L299.2,35.481L302.6,37.664L306,39.918L309.4,42.241L312.8,44.633L316.2,47.091L319.6,49.614L323,52.2L326.4,54.848L329.8,57.556L333.2,60.323L336.6,63.146L340,66.024L343.4,68.955L346.8,71.938L350.2,74.969L353.6,78.048L357,81.173L360.4,84.341L363.8,87.55L367.2,90.799L370.6,94.085L374,97.407L377.4,100.761L380.8,104.147L384.2,107.562L387.6,111.004L391,114.47L394.4,117.959L397.8,121.468L401.2,124.995L404.6,128.538L408,132.094L411.4,135.661L414.8,139.238L418.2,142.822L421.6,146.41L425,150L428.4,153.59L431.8,157.178L435.2,160.762L438.6,164.339L442,167.906L445.4,171.462L448.8,175.005L452.2,178.532L455.6,182.041L459,185.53L462.4,188.996L465.8,192.438L469.2,195.853L472.6,199.239L476,202.593L479.4,205.915L482.8,209.201L486.2,212.45L489.6,215.659L493,218.827L496.4,221.952L499.8,225.031L503.2,228.062L506.6,231.045L510,233.976L513.4,236.854L516.8,239.677L520.2,242.444L523.6,245.152L527,247.8L530.4,250.386L533.8,252.909L537.2,255.367L540.6,257.759L544,260.082L547.4,262.336L550.8,264.519L554.2,266.629L557.6,268.666L561,270.628L564.4,272.513L567.8,274.322L571.2,276.052L574.6,277.702L578,279.271L581.4,280.759L584.8,282.164L588.2,283.486L591.6,284.724L595,285.876L598.4,286.942L601.8,287.923L605.2,288.815L608.6,289.621L612,290.338L615.4,290.966L618.8,291.506L622.2,291.956L625.6,292.316L629,292.587L632.4,292.767L635.8,292.857L639.2,292.857L642.6,292.767L646,292.587L649.4,292.316L652.8,291.956L656.2,291.506L659.6,290.966L663,290.338L666.4,289.621L669.8,288.815L673.2,287.923L676.6,286.942L680,285.876L683.4,284.724L686.8,283.486L690.2,282.164L693.6,280.759L697,279.271L700.4,277.702L703.8,276.052L707.2,274.322L710.6,272.513L714,270.628L717.4,268.666L720.8,266.629L724.2,264.519L727.6,262.336L731,260.082L734.4,257.759L737.8,255.367L741.2,252.909L744.6,250.386L748,247.8L751.4,245.152L754.8,242.444L758.2,239.677L761.6,236.854L765,233.976L768.4,231.045L771.8,228.062L775.2,225.031L778.6,221.952L782,218.827L785.4,215.659L788.8,212.45L792.2,209.201L795.6,205.915L799,202.593L802.4,199.239L805.8,195.853L809.2,192.438L812.6,188.996L816,185.53L819.4,182.041L822.8,178.532L826.2,175.005L829.6,171.462L833,167.906L836.4,164.339L839.8,160.762L843.2,157.178L846.6,153.59"
                    data-testid="Line-Series-1"
                    style="stroke: steelblue; stroke-width: 1px; stroke-opacity: 1; fill: none; display: inherit;"
                  />
                </g>
                <g
                  clip-path="url(#clip-path-850-300-Series-1-0-ALL/Series-2-0-ALL/Series-3-0-ALL)"
                >
                  <path
                    class="line"
                    d="M0,7.143L3.4,7.188L6.8,7.323L10.2,7.549L13.6,7.864L17,8.269L20.4,8.764L23.8,9.348L27.2,10.021L30.6,10.782L34,11.631L37.4,12.567L40.8,13.591L44.2,14.7L47.6,15.895L51,17.175L54.4,18.538L57.8,19.985L61.2,21.514L64.6,23.123L68,24.813L71.4,26.582L74.8,28.429L78.2,30.353L81.6,32.352L85,34.426L88.4,36.573L91.8,38.791L95.2,41.08L98.6,43.437L102,45.862L105.4,48.352L108.8,50.907L112.2,53.524L115.6,56.202L119,58.939L122.4,61.734L125.8,64.585L129.2,67.49L132.6,70.446L136,73.453L139.4,76.509L142.8,79.61L146.2,82.757L149.6,85.945L153,89.174L156.4,92.442L159.8,95.746L163.2,99.084L166.6,102.454L170,105.855L173.4,109.283L176.8,112.737L180.2,116.214L183.6,119.713L187,123.231L190.4,126.766L193.8,130.316L197.2,133.878L200.6,137.45L204,141.03L207.4,144.616L210.8,148.205L214.2,151.795L217.6,155.384L221,158.97L224.4,162.55L227.8,166.122L231.2,169.684L234.6,173.234L238,176.769L241.4,180.287L244.8,183.786L248.2,187.263L251.6,190.717L255,194.145L258.4,197.546L261.8,200.916L265.2,204.254L268.6,207.558L272,210.826L275.4,214.055L278.8,217.243L282.2,220.39L285.6,223.491L289,226.547L292.4,229.554L295.8,232.51L299.2,235.415L302.6,238.266L306,241.061L309.4,243.798L312.8,246.476L316.2,249.093L319.6,251.648L323,254.138L326.4,256.563L329.8,258.92L333.2,261.209L336.6,263.427L340,265.574L343.4,267.648L346.8,269.647L350.2,271.571L353.6,273.418L357,275.187L360.4,276.877L363.8,278.486L367.2,280.015L370.6,281.462L374,282.825L377.4,284.105L380.8,285.3L384.2,286.409L387.6,287.433L391,288.369L394.4,289.218L397.8,289.979L401.2,290.652L404.6,291.236L408,291.731L411.4,292.136L414.8,292.451L418.2,292.677L421.6,292.812L425,292.857L428.4,292.812L431.8,292.677L435.2,292.451L438.6,292.136L442,291.731L445.4,291.236L448.8,290.652L452.2,289.979L455.6,289.218L459,288.369L462.4,287.433L465.8,286.409L469.2,285.3L472.6,284.105L476,282.825L479.4,281.462L482.8,280.015L486.2,278.486L489.6,276.877L493,275.187L496.4,273.418L499.8,271.571L503.2,269.647L506.6,267.648L510,265.574L513.4,263.427L516.8,261.209L520.2,258.92L523.6,256.563L527,254.138L530.4,251.648L533.8,249.093L537.2,246.476L540.6,243.798L544,241.061L547.4,238.266L550.8,235.415L554.2,232.51L557.6,229.554L561,226.547L564.4,223.491L567.8,220.39L571.2,217.243L574.6,214.055L578,210.826L581.4,207.558L584.8,204.254L588.2,200.916L591.6,197.546L595,194.145L598.4,190.717L601.8,187.263L605.2,183.786L608.6,180.287L612,176.769L615.4,173.234L618.8,169.684L622.2,166.122L625.6,162.55L629,158.97L632.4,155.384L635.8,151.795L639.2,148.205L642.6,144.616L646,141.03L649.4,137.45L652.8,133.878L656.2,130.316L659.6,126.766L663,123.231L666.4,119.713L669.8,116.214L673.2,112.737L676.6,109.283L680,105.855L683.4,102.454L686.8,99.084L690.2,95.746L693.6,92.442L697,89.174L700.4,85.945L703.8,82.757L707.2,79.61L710.6,76.509L714,73.453L717.4,70.446L720.8,67.49L724.2,64.585L727.6,61.734L731,58.939L734.4,56.202L737.8,53.524L741.2,50.907L744.6,48.352L748,45.862L751.4,43.437L754.8,41.08L758.2,38.791L761.6,36.573L765,34.426L768.4,32.352L771.8,30.353L775.2,28.429L778.6,26.582L782,24.813L785.4,23.123L788.8,21.514L792.2,19.985L795.6,18.538L799,17.175L802.4,15.895L805.8,14.7L809.2,13.591L812.6,12.567L816,11.631L819.4,10.782L822.8,10.021L826.2,9.348L829.6,8.764L833,8.269L836.4,7.864L839.8,7.549L843.2,7.323L846.6,7.188"
                    data-testid="Line-Series-2"
                    style="stroke: maroon; stroke-width: 1px; stroke-opacity: 1; fill: none; display: inherit;"
                  />
                </g>
                <g
                  clip-path="url(#clip-path-850-300-Series-1-0-ALL/Series-2-0-ALL/Series-3-0-ALL)"
                >
                  <path
                    class="line"
                    d="M0,150L3.4,149.955L6.8,149.91L10.2,149.864L13.6,149.819L17,149.773L20.4,149.727L23.8,149.681L27.2,149.634L30.6,149.587L34,149.539L37.4,149.491L40.8,149.442L44.2,149.392L47.6,149.341L51,149.289L54.4,149.236L57.8,149.183L61.2,149.127L64.6,149.071L68,149.013L71.4,148.953L74.8,148.892L78.2,148.829L81.6,148.763L85,148.696L88.4,148.625L91.8,148.552L95.2,148.476L98.6,148.397L102,148.314L105.4,148.227L108.8,148.136L112.2,148.039L115.6,147.938L119,147.83L122.4,147.715L125.8,147.593L129.2,147.463L132.6,147.322L136,147.171L139.4,147.007L142.8,146.829L146.2,146.635L149.6,146.421L153,146.185L156.4,145.922L159.8,145.627L163.2,145.294L166.6,144.913L170,144.475L173.4,143.962L176.8,143.356L180.2,142.624L183.6,141.724L187,140.589L190.4,139.108L193.8,137.095L197.2,134.194L200.6,129.643L204,121.465L207.4,102.401L210.8,7.143L214.2,292.857L217.6,197.599L221,178.535L224.4,170.357L227.8,165.806L231.2,162.905L234.6,160.892L238,159.411L241.4,158.276L244.8,157.376L248.2,156.644L251.6,156.038L255,155.525L258.4,155.087L261.8,154.706L265.2,154.373L268.6,154.078L272,153.815L275.4,153.579L278.8,153.365L282.2,153.171L285.6,152.993L289,152.829L292.4,152.678L295.8,152.537L299.2,152.407L302.6,152.285L306,152.17L309.4,152.062L312.8,151.961L316.2,151.864L319.6,151.773L323,151.686L326.4,151.603L329.8,151.524L333.2,151.448L336.6,151.375L340,151.304L343.4,151.237L346.8,151.171L350.2,151.108L353.6,151.047L357,150.987L360.4,150.929L363.8,150.873L367.2,150.817L370.6,150.764L374,150.711L377.4,150.659L380.8,150.608L384.2,150.558L387.6,150.509L391,150.461L394.4,150.413L397.8,150.366L401.2,150.319L404.6,150.273L408,150.227L411.4,150.181L414.8,150.136L418.2,150.09L421.6,150.045L425,150L428.4,149.955L431.8,149.91L435.2,149.864L438.6,149.819L442,149.773L445.4,149.727L448.8,149.681L452.2,149.634L455.6,149.587L459,149.539L462.4,149.491L465.8,149.442L469.2,149.392L472.6,149.341L476,149.289L479.4,149.236L482.8,149.183L486.2,149.127L489.6,149.071L493,149.013L496.4,148.953L499.8,148.892L503.2,148.829L506.6,148.763L510,148.696L513.4,148.625L516.8,148.552L520.2,148.476L523.6,148.397L527,148.314L530.4,148.227L533.8,148.136L537.2,148.039L540.6,147.938L544,147.83L547.4,147.715L550.8,147.593L554.2,147.463L557.6,147.322L561,147.171L564.4,147.007L567.8,146.829L571.2,146.635L574.6,146.421L578,146.185L581.4,145.922L584.8,145.627L588.2,145.294L591.6,144.913L595,144.475L598.4,143.962L601.8,143.356L605.2,142.624L608.6,141.724L612,140.589L615.4,139.108L618.8,137.095L622.2,134.194L625.6,129.643L629,121.465L632.4,102.401L635.8,7.143L639.2,292.857L642.6,197.599L646,178.535L649.4,170.357L652.8,165.806L656.2,162.905L659.6,160.892L663,159.411L666.4,158.276L669.8,157.376L673.2,156.644L676.6,156.038L680,155.525L683.4,155.087L686.8,154.706L690.2,154.373L693.6,154.078L697,153.815L700.4,153.579L703.8,153.365L707.2,153.171L710.6,152.993L714,152.829L717.4,152.678L720.8,152.537L724.2,152.407L727.6,152.285L731,152.17L734.4,152.062L737.8,151.961L741.2,151.864L744.6,151.773L748,151.686L751.4,151.603L754.8,151.524L758.2,151.448L761.6,151.375L765,151.304L768.4,151.237L771.8,151.171L775.2,151.108L778.6,151.047L782,150.987L785.4,150.929L788.8,150.873L792.2,150.817L795.6,150.764L799,150.711L802.4,150.659L805.8,150.608L809.2,150.558L812.6,150.509L816,150.461L819.4,150.413L822.8,150.366L826.2,150.319L829.6,150.273L833,150.227L836.4,150.181L839.8,150.136L843.2,150.09L846.6,150.045"
                    data-testid="Line-Series-3"
                    style="stroke: forestgreen; stroke-width: 1px; stroke-opacity: 1; fill: none; display: inherit;"
                  />
                </g>
              </g>
              <rect
                fill="none"
                height="300"
                pointer-events="all"
                width="850"
              />
            </svg>
          </div>
          <div
            class="y-axis-container"
            style="grid-area: yaxis; display: flex; flex-direction: column;"
          >
            <svg
              height="300"
              width="150"
            >
              <g
                class="axis-y axis-y-Series-1"
                cursor="move"
                transform="translate(0, 0)"
              >
                <g
                  class="axis y-axis"
                  data-testid="yAxis-Series-1"
                  fill="none"
                  font-size="14"
                  stroke-width="2"
                  text-anchor="start"
                >
                  <path
                    d="M6,299H1V1H6"
                    stroke="steelblue"
                  />
                  <g
                    opacity="1"
                    transform="translate(0, 292.86842314724197)"
                  >
                    <line
                      stroke="steelblue"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="steelblue"
                      x="9"
                      y="1"
                    >
                      -1
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(0, 221.43421157362098)"
                  >
                    <line
                      stroke="steelblue"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="steelblue"
                      x="9"
                      y="1"
                    >
                      -0.5
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(0, 150)"
                  >
                    <line
                      stroke="steelblue"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="steelblue"
                      x="9"
                      y="1"
                    >
                      0
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(0, 78.56578842637903)"
                  >
                    <line
                      stroke="steelblue"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="steelblue"
                      x="9"
                      y="1"
                    >
                      0.5
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(0, 7.1315768527579815)"
                  >
                    <line
                      stroke="steelblue"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="steelblue"
                      x="9"
                      y="1"
                    >
                      1
                    </text>
                  </g>
                </g>
                <rect
                  fill="none"
                  height="300"
                  pointer-events="all"
                  width="50"
                />
              </g>
              <g
                class="axis-y axis-y-Series-2"
                cursor="move"
                transform="translate(50, 0)"
              >
                <g
                  class="axis y-axis"
                  data-testid="yAxis-Series-2"
                  fill="none"
                  font-size="14"
                  stroke-width="2"
                  text-anchor="start"
                >
                  <path
                    d="M6,299H1V1H6"
                    stroke="maroon"
                  />
                  <g
                    opacity="1"
                    transform="translate(0, 292.85714285714283)"
                  >
                    <line
                      stroke="maroon"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="maroon"
                      x="9"
                      y="1"
                    >
                      -1
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(0, 221.42857142857144)"
                  >
                    <line
                      stroke="maroon"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="maroon"
                      x="9"
                      y="1"
                    >
                      -0.5
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(0, 150)"
                  >
                    <line
                      stroke="maroon"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="maroon"
                      x="9"
                      y="1"
                    >
                      0
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(0, 78.57142857142856)"
                  >
                    <line
                      stroke="maroon"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="maroon"
                      x="9"
                      y="1"
                    >
                      0.5
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(0, 7.142857142857184)"
                  >
                    <line
                      stroke="maroon"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="maroon"
                      x="9"
                      y="1"
                    >
                      1
                    </text>
                  </g>
                </g>
                <rect
                  fill="none"
                  height="300"
                  pointer-events="all"
                  width="50"
                />
              </g>
              <g
                class="axis-y axis-y-Series-3"
                cursor="move"
                transform="translate(100, 0)"
              >
                <g
                  class="axis y-axis"
                  data-testid="yAxis-Series-3"
                  fill="none"
                  font-size="14"
                  stroke-width="2"
                  text-anchor="start"
                >
                  <path
                    d="M6,299H1V1H6"
                    stroke="forestgreen"
                  />
                  <g
                    opacity="1"
                    transform="translate(0, 293.6232242671943)"
                  >
                    <line
                      stroke="forestgreen"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="forestgreen"
                      x="9"
                      y="1"
                    >
                      -80
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(0, 257.7174182003954)"
                  >
                    <line
                      stroke="forestgreen"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="forestgreen"
                      x="9"
                      y="1"
                    >
                      -60
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(0, 221.81161213359644)"
                  >
                    <line
                      stroke="forestgreen"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="forestgreen"
                      x="9"
                      y="1"
                    >
                      -40
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(0, 185.9058060667975)"
                  >
                    <line
                      stroke="forestgreen"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="forestgreen"
                      x="9"
                      y="1"
                    >
                      -20
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(0, 149.99999999999864)"
                  >
                    <line
                      stroke="forestgreen"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="forestgreen"
                      x="9"
                      y="1"
                    >
                      0
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(0, 114.09419393319972)"
                  >
                    <line
                      stroke="forestgreen"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="forestgreen"
                      x="9"
                      y="1"
                    >
                      20
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(0, 78.1883878664008)"
                  >
                    <line
                      stroke="forestgreen"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="forestgreen"
                      x="9"
                      y="1"
                    >
                      40
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(0, 42.28258179960188)"
                  >
                    <line
                      stroke="forestgreen"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="forestgreen"
                      x="9"
                      y="1"
                    >
                      60
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(0, 6.3767757328029635)"
                  >
                    <line
                      stroke="forestgreen"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="forestgreen"
                      x="9"
                      y="1"
                    >
                      80
                    </text>
                  </g>
                </g>
                <rect
                  fill="none"
                  height="300"
                  pointer-events="all"
                  width="50"
                />
              </g>
            </svg>
          </div>
          <div
            class="x-axis-container"
            style="grid-area: xaxis; display: flex; flex-direction: row; width: 100%;"
          >
            <div
              style="width: 100%;"
            >
              <svg
                height="50"
                style="width: 100%; display: block;"
                width="850"
              >
                <g
                  class="axis x-axis"
                  data-testid="xAxis"
                  fill="none"
                  font-size="14"
                  stroke-width="2"
                  text-anchor="middle"
                >
                  <path
                    d="M1,6V1H849V6"
                    stroke="black"
                  />
                  <g
                    opacity="1"
                    transform="translate(61.199999999999996, 0)"
                  >
                    <line
                      stroke="black"
                      x1="1"
                      x2="1"
                      y2="6"
                    />
                    <text
                      class="tick-value"
                      dy="0.71em"
                      fill="black"
                      x="1"
                      y="9"
                    >
                      03:00
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(153, 0)"
                  >
                    <line
                      stroke="black"
                      x1="1"
                      x2="1"
                      y2="6"
                    />
                    <text
                      class="tick-value"
                      dy="0.71em"
                      fill="black"
                      x="1"
                      y="9"
                    >
                      06:00
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(244.79999999999998, 0)"
                  >
                    <line
                      stroke="black"
                      x1="1"
                      x2="1"
                      y2="6"
                    />
                    <text
                      class="tick-value"
                      dy="0.71em"
                      fill="black"
                      x="1"
                      y="9"
                    >
                      09:00
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(336.6, 0)"
                  >
                    <line
                      stroke="black"
                      x1="1"
                      x2="1"
                      y2="6"
                    />
                    <text
                      class="tick-value"
                      dy="0.71em"
                      fill="black"
                      x="1"
                      y="9"
                    >
                      12:00
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(428.4, 0)"
                  >
                    <line
                      stroke="black"
                      x1="1"
                      x2="1"
                      y2="6"
                    />
                    <text
                      class="tick-value"
                      dy="0.71em"
                      fill="black"
                      x="1"
                      y="9"
                    >
                      15:00
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(520.2, 0)"
                  >
                    <line
                      stroke="black"
                      x1="1"
                      x2="1"
                      y2="6"
                    />
                    <text
                      class="tick-value"
                      dy="0.71em"
                      fill="black"
                      x="1"
                      y="9"
                    >
                      18:00
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(612, 0)"
                  >
                    <line
                      stroke="black"
                      x1="1"
                      x2="1"
                      y2="6"
                    />
                    <text
                      class="tick-value"
                      dy="0.71em"
                      fill="black"
                      x="1"
                      y="9"
                    >
                      21:00
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(703.8, 0)"
                  >
                    <line
                      stroke="black"
                      x1="1"
                      x2="1"
                      y2="6"
                    />
                    <text
                      class="tick-value"
                      dy="0.71em"
                      fill="black"
                      x="1"
                      y="9"
                    >
                      02/01
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(795.6, 0)"
                  >
                    <line
                      stroke="black"
                      x1="1"
                      x2="1"
                      y2="6"
                    />
                    <text
                      class="tick-value"
                      dy="0.71em"
                      fill="black"
                      x="1"
                      y="9"
                    >
                      03:00
                    </text>
                  </g>
                </g>
                <rect
                  fill="none"
                  height="50"
                  pointer-events="all"
                  width="850"
                />
              </svg>
            </div>
          </div>
          <div
            style="grid-area: spacer;"
          />
          <div
            class="context-container"
            style="grid-area: context; display: flex; flex-direction: column;"
          >
            <div
              style="width: 100%;"
            >
              <svg
                height="50"
                style="width: 100%; display: block;"
                width="850"
              >
                <g
                  height="100"
                  width="850"
                >
                  <clippath
                    id="clip-path-850-100-"
                  >
                    <rect
                      fill="none"
                      height="100"
                      width="850"
                    />
                  </clippath>
                </g>
                <g
                  fill="none"
                  stroke="#777"
                >
                  <rect
                    class="before-selection"
                    fill="#777"
                    fill-opacity="0.3"
                    height="100"
                    shape-rendering="crispEdges"
                    stroke="#fff"
                    width="0"
                    x="0"
                    y="0"
                  />
                  <rect
                    class="after-selection"
                    fill="#777"
                    fill-opacity="0.3"
                    height="100"
                    shape-rendering="crispEdges"
                    stroke="#fff"
                    width="0"
                    x="850"
                    y="0"
                  />
                  <rect
                    class="overlay"
                    cursor="crosshair"
                    fill="none"
                    height="100"
                    pointer-events="all"
                    width="850"
                    x="0"
                    y="0"
                  />
                  <rect
                    class="selection"
                    cursor="move"
                    fill="none"
                    fill-opacity="0.3"
                    height="100"
                    pointer-events="all"
                    shape-rendering="crispEdges"
                    width="850"
                    x="0"
                    y="0"
                  />
                  <path
                    class="handle handle--west"
                    d="M 0 0 V 100"
                    stroke="#333"
                    stroke-width="2"
                  />
                  <rect
                    class="handle-target handle-target--west"
                    cursor="ew-resize"
                    fill="none"
                    height="100"
                    pointer-events="all"
                    stroke="none"
                    width="10"
                    x="-5"
                    y="0"
                  />
                  <circle
                    class="handle-target handle-target--west"
                    cursor="ew-resize"
                    cx="-1"
                    cy="25"
                    fill="#333"
                    pointer-events="all"
                    r="8"
                    stroke="#333"
                    stroke-width="2"
                  />
                  <circle
                    class="handle-target handle-target--east"
                    cursor="ew-resize"
                    cx="849"
                    cy="25"
                    fill="#333"
                    pointer-events="all"
                    r="8"
                    stroke="#333"
                    stroke-width="2"
                  />
                  <path
                    class="handle handle--east"
                    d="M 850 0 V 100"
                    stroke="#333"
                    stroke-width="2"
                  />
                  <rect
                    class="handle-target handle-target--east"
                    cursor="ew-resize"
                    fill="none"
                    height="100"
                    pointer-events="all"
                    stroke="none"
                    width="10"
                    x="845"
                    y="0"
                  />
                </g>
              </svg>
              <div
                style="width: 100%;"
              >
                <svg
                  height="50"
                  style="width: 100%; display: block;"
                  width="1"
                >
                  <g
                    class="axis x-axis"
                    data-testid="xAxis"
                    fill="none"
                    font-size="14"
                    stroke-width="2"
                    text-anchor="middle"
                  >
                    <path
                      d="M1,6V1H0V6"
                      stroke="black"
                    />
                    <g
                      opacity="1"
                      transform="translate(0.828, 0)"
                    >
                      <line
                        stroke="black"
                        x1="1"
                        x2="1"
                        y2="6"
                      />
                      <text
                        class="tick-value"
                        dy="0.71em"
                        fill="black"
                        x="1"
                        y="9"
                      >
                        02/01
                      </text>
                    </g>
                  </g>
                  <rect
                    fill="none"
                    height="50"
                    pointer-events="all"
                    width="1"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LineChart should render multiple series in a single collection correctly 1`] = `
<DocumentFragment>
  <div
    style="display: flex; justify-content: center; padding: 2rem;"
  >
    <div
      style="width: 100%; max-width: 1000px;"
    >
      <div
        style="width: 100%; height: 100%;"
      >
        <div
          class="linechart-container"
          style="display: grid; grid-template-areas: 'chart yaxis' 'xaxis .' 'context .'; grid-template-rows: 1fr auto auto; grid-template-columns: 1fr auto auto; height: 100%;"
        >
          <div
            class="lines-container"
            style="grid-area: chart; display: flex; flex-direction: column; height: 100%;"
          >
            <svg
              height="300"
              width="950"
            >
              <g
                height="300"
                width="950"
              >
                <clippath
                  id="clip-path-950-300-Series-1-Collection-1-ALL/Series-2-Collection-1-ALL/Series-3-Collection-1-ALL"
                >
                  <rect
                    fill="none"
                    height="300"
                    width="950"
                  />
                </clippath>
                <g
                  clip-path="url(#clip-path-950-300-Series-1-Collection-1-ALL/Series-2-Collection-1-ALL/Series-3-Collection-1-ALL)"
                >
                  <path
                    class="line"
                    d="M0,150L3.8,149.955L7.6,149.91L11.4,149.865L15.2,149.82L19,149.775L22.8,149.73L26.6,149.686L30.4,149.641L34.2,149.597L38,149.554L41.8,149.51L45.6,149.467L49.4,149.424L53.2,149.381L57,149.339L60.8,149.297L64.6,149.256L68.4,149.215L72.2,149.175L76,149.135L79.8,149.096L83.6,149.057L87.4,149.019L91.2,148.982L95,148.945L98.8,148.909L102.6,148.873L106.4,148.838L110.2,148.804L114,148.771L117.8,148.739L121.6,148.707L125.4,148.676L129.2,148.646L133,148.617L136.8,148.588L140.6,148.561L144.4,148.534L148.2,148.509L152,148.484L155.8,148.46L159.6,148.438L163.4,148.416L167.2,148.395L171,148.376L174.8,148.357L178.6,148.339L182.4,148.323L186.2,148.307L190,148.293L193.8,148.279L197.6,148.267L201.4,148.256L205.2,148.246L209,148.237L212.8,148.229L216.6,148.222L220.4,148.216L224.2,148.212L228,148.208L231.8,148.206L235.6,148.205L239.4,148.205L243.2,148.206L247,148.208L250.8,148.212L254.6,148.216L258.4,148.222L262.2,148.229L266,148.237L269.8,148.246L273.6,148.256L277.4,148.267L281.2,148.279L285,148.293L288.8,148.307L292.6,148.323L296.4,148.339L300.2,148.357L304,148.376L307.8,148.395L311.6,148.416L315.4,148.438L319.2,148.46L323,148.484L326.8,148.509L330.6,148.534L334.4,148.561L338.2,148.588L342,148.617L345.8,148.646L349.6,148.676L353.4,148.707L357.2,148.739L361,148.771L364.8,148.804L368.6,148.838L372.4,148.873L376.2,148.909L380,148.945L383.8,148.982L387.6,149.019L391.4,149.057L395.2,149.096L399,149.135L402.8,149.175L406.6,149.215L410.4,149.256L414.2,149.297L418,149.339L421.8,149.381L425.6,149.424L429.4,149.467L433.2,149.51L437,149.554L440.8,149.597L444.6,149.641L448.4,149.686L452.2,149.73L456,149.775L459.8,149.82L463.6,149.865L467.4,149.91L471.2,149.955L475,150L478.8,150.045L482.6,150.09L486.4,150.135L490.2,150.18L494,150.225L497.8,150.27L501.6,150.314L505.4,150.359L509.2,150.403L513,150.446L516.8,150.49L520.6,150.533L524.4,150.576L528.2,150.619L532,150.661L535.8,150.703L539.6,150.744L543.4,150.785L547.2,150.825L551,150.865L554.8,150.904L558.6,150.943L562.4,150.981L566.2,151.018L570,151.055L573.8,151.091L577.6,151.127L581.4,151.162L585.2,151.196L589,151.229L592.8,151.261L596.6,151.293L600.4,151.324L604.2,151.354L608,151.383L611.8,151.412L615.6,151.439L619.4,151.466L623.2,151.491L627,151.516L630.8,151.54L634.6,151.562L638.4,151.584L642.2,151.605L646,151.624L649.8,151.643L653.6,151.661L657.4,151.677L661.2,151.693L665,151.707L668.8,151.721L672.6,151.733L676.4,151.744L680.2,151.754L684,151.763L687.8,151.771L691.6,151.778L695.4,151.784L699.2,151.788L703,151.792L706.8,151.794L710.6,151.795L714.4,151.795L718.2,151.794L722,151.792L725.8,151.788L729.6,151.784L733.4,151.778L737.2,151.771L741,151.763L744.8,151.754L748.6,151.744L752.4,151.733L756.2,151.721L760,151.707L763.8,151.693L767.6,151.677L771.4,151.661L775.2,151.643L779,151.624L782.8,151.605L786.6,151.584L790.4,151.562L794.2,151.54L798,151.516L801.8,151.491L805.6,151.466L809.4,151.439L813.2,151.412L817,151.383L820.8,151.354L824.6,151.324L828.4,151.293L832.2,151.261L836,151.229L839.8,151.196L843.6,151.162L847.4,151.127L851.2,151.091L855,151.055L858.8,151.018L862.6,150.981L866.4,150.943L870.2,150.904L874,150.865L877.8,150.825L881.6,150.785L885.4,150.744L889.2,150.703L893,150.661L896.8,150.619L900.6,150.576L904.4,150.533L908.2,150.49L912,150.446L915.8,150.403L919.6,150.359L923.4,150.314L927.2,150.27L931,150.225L934.8,150.18L938.6,150.135L942.4,150.09L946.2,150.045"
                    data-testid="Line-Series-1"
                    style="stroke: darkkhaki; stroke-width: 1px; stroke-opacity: 1; fill: none; display: inherit;"
                  />
                </g>
                <g
                  clip-path="url(#clip-path-950-300-Series-1-Collection-1-ALL/Series-2-Collection-1-ALL/Series-3-Collection-1-ALL)"
                >
                  <path
                    class="line"
                    d="M0,148.205L3.8,148.205L7.6,148.207L11.4,148.21L15.2,148.214L19,148.219L22.8,148.225L26.6,148.232L30.4,148.241L34.2,148.25L38,148.261L41.8,148.273L45.6,148.286L49.4,148.3L53.2,148.315L57,148.331L60.8,148.348L64.6,148.366L68.4,148.385L72.2,148.406L76,148.427L79.8,148.449L83.6,148.472L87.4,148.496L91.2,148.522L95,148.548L98.8,148.575L102.6,148.602L106.4,148.631L110.2,148.661L114,148.691L117.8,148.723L121.6,148.755L125.4,148.788L129.2,148.821L133,148.856L136.8,148.891L140.6,148.927L144.4,148.963L148.2,149L152,149.038L155.8,149.076L159.6,149.115L163.4,149.155L167.2,149.195L171,149.236L174.8,149.277L178.6,149.318L182.4,149.36L186.2,149.402L190,149.445L193.8,149.488L197.6,149.532L201.4,149.575L205.2,149.619L209,149.664L212.8,149.708L216.6,149.753L220.4,149.797L224.2,149.842L228,149.887L231.8,149.932L235.6,149.977L239.4,150.023L243.2,150.068L247,150.113L250.8,150.158L254.6,150.203L258.4,150.247L262.2,150.292L266,150.336L269.8,150.381L273.6,150.425L277.4,150.468L281.2,150.512L285,150.555L288.8,150.598L292.6,150.64L296.4,150.682L300.2,150.723L304,150.764L307.8,150.805L311.6,150.845L315.4,150.885L319.2,150.924L323,150.962L326.8,151L330.6,151.037L334.4,151.073L338.2,151.109L342,151.144L345.8,151.179L349.6,151.212L353.4,151.245L357.2,151.277L361,151.309L364.8,151.339L368.6,151.369L372.4,151.398L376.2,151.425L380,151.452L383.8,151.478L387.6,151.504L391.4,151.528L395.2,151.551L399,151.573L402.8,151.594L406.6,151.615L410.4,151.634L414.2,151.652L418,151.669L421.8,151.685L425.6,151.7L429.4,151.714L433.2,151.727L437,151.739L440.8,151.75L444.6,151.759L448.4,151.768L452.2,151.775L456,151.781L459.8,151.786L463.6,151.79L467.4,151.793L471.2,151.795L475,151.795L478.8,151.795L482.6,151.793L486.4,151.79L490.2,151.786L494,151.781L497.8,151.775L501.6,151.768L505.4,151.759L509.2,151.75L513,151.739L516.8,151.727L520.6,151.714L524.4,151.7L528.2,151.685L532,151.669L535.8,151.652L539.6,151.634L543.4,151.615L547.2,151.594L551,151.573L554.8,151.551L558.6,151.528L562.4,151.504L566.2,151.478L570,151.452L573.8,151.425L577.6,151.398L581.4,151.369L585.2,151.339L589,151.309L592.8,151.277L596.6,151.245L600.4,151.212L604.2,151.179L608,151.144L611.8,151.109L615.6,151.073L619.4,151.037L623.2,151L627,150.962L630.8,150.924L634.6,150.885L638.4,150.845L642.2,150.805L646,150.764L649.8,150.723L653.6,150.682L657.4,150.64L661.2,150.598L665,150.555L668.8,150.512L672.6,150.468L676.4,150.425L680.2,150.381L684,150.336L687.8,150.292L691.6,150.247L695.4,150.203L699.2,150.158L703,150.113L706.8,150.068L710.6,150.023L714.4,149.977L718.2,149.932L722,149.887L725.8,149.842L729.6,149.797L733.4,149.753L737.2,149.708L741,149.664L744.8,149.619L748.6,149.575L752.4,149.532L756.2,149.488L760,149.445L763.8,149.402L767.6,149.36L771.4,149.318L775.2,149.277L779,149.236L782.8,149.195L786.6,149.155L790.4,149.115L794.2,149.076L798,149.038L801.8,149L805.6,148.963L809.4,148.927L813.2,148.891L817,148.856L820.8,148.821L824.6,148.788L828.4,148.755L832.2,148.723L836,148.691L839.8,148.661L843.6,148.631L847.4,148.602L851.2,148.575L855,148.548L858.8,148.522L862.6,148.496L866.4,148.472L870.2,148.449L874,148.427L877.8,148.406L881.6,148.385L885.4,148.366L889.2,148.348L893,148.331L896.8,148.315L900.6,148.3L904.4,148.286L908.2,148.273L912,148.261L915.8,148.25L919.6,148.241L923.4,148.232L927.2,148.225L931,148.219L934.8,148.214L938.6,148.21L942.4,148.207L946.2,148.205"
                    data-testid="Line-Series-2"
                    style="stroke: darkkhaki; stroke-width: 1px; stroke-opacity: 1; fill: none; display: inherit;"
                  />
                </g>
                <g
                  clip-path="url(#clip-path-950-300-Series-1-Collection-1-ALL/Series-2-Collection-1-ALL/Series-3-Collection-1-ALL)"
                >
                  <path
                    class="line"
                    d="M0,150L3.8,149.955L7.6,149.91L11.4,149.864L15.2,149.819L19,149.773L22.8,149.727L26.6,149.681L30.4,149.634L34.2,149.587L38,149.539L41.8,149.491L45.6,149.442L49.4,149.392L53.2,149.341L57,149.289L60.8,149.236L64.6,149.183L68.4,149.127L72.2,149.071L76,149.013L79.8,148.953L83.6,148.892L87.4,148.829L91.2,148.763L95,148.696L98.8,148.625L102.6,148.552L106.4,148.476L110.2,148.397L114,148.314L117.8,148.227L121.6,148.136L125.4,148.039L129.2,147.938L133,147.83L136.8,147.715L140.6,147.593L144.4,147.463L148.2,147.322L152,147.171L155.8,147.007L159.6,146.829L163.4,146.635L167.2,146.421L171,146.185L174.8,145.922L178.6,145.627L182.4,145.294L186.2,144.913L190,144.475L193.8,143.962L197.6,143.356L201.4,142.624L205.2,141.724L209,140.589L212.8,139.108L216.6,137.095L220.4,134.194L224.2,129.643L228,121.465L231.8,102.401L235.6,7.143L239.4,292.857L243.2,197.599L247,178.535L250.8,170.357L254.6,165.806L258.4,162.905L262.2,160.892L266,159.411L269.8,158.276L273.6,157.376L277.4,156.644L281.2,156.038L285,155.525L288.8,155.087L292.6,154.706L296.4,154.373L300.2,154.078L304,153.815L307.8,153.579L311.6,153.365L315.4,153.171L319.2,152.993L323,152.829L326.8,152.678L330.6,152.537L334.4,152.407L338.2,152.285L342,152.17L345.8,152.062L349.6,151.961L353.4,151.864L357.2,151.773L361,151.686L364.8,151.603L368.6,151.524L372.4,151.448L376.2,151.375L380,151.304L383.8,151.237L387.6,151.171L391.4,151.108L395.2,151.047L399,150.987L402.8,150.929L406.6,150.873L410.4,150.817L414.2,150.764L418,150.711L421.8,150.659L425.6,150.608L429.4,150.558L433.2,150.509L437,150.461L440.8,150.413L444.6,150.366L448.4,150.319L452.2,150.273L456,150.227L459.8,150.181L463.6,150.136L467.4,150.09L471.2,150.045L475,150L478.8,149.955L482.6,149.91L486.4,149.864L490.2,149.819L494,149.773L497.8,149.727L501.6,149.681L505.4,149.634L509.2,149.587L513,149.539L516.8,149.491L520.6,149.442L524.4,149.392L528.2,149.341L532,149.289L535.8,149.236L539.6,149.183L543.4,149.127L547.2,149.071L551,149.013L554.8,148.953L558.6,148.892L562.4,148.829L566.2,148.763L570,148.696L573.8,148.625L577.6,148.552L581.4,148.476L585.2,148.397L589,148.314L592.8,148.227L596.6,148.136L600.4,148.039L604.2,147.938L608,147.83L611.8,147.715L615.6,147.593L619.4,147.463L623.2,147.322L627,147.171L630.8,147.007L634.6,146.829L638.4,146.635L642.2,146.421L646,146.185L649.8,145.922L653.6,145.627L657.4,145.294L661.2,144.913L665,144.475L668.8,143.962L672.6,143.356L676.4,142.624L680.2,141.724L684,140.589L687.8,139.108L691.6,137.095L695.4,134.194L699.2,129.643L703,121.465L706.8,102.401L710.6,7.143L714.4,292.857L718.2,197.599L722,178.535L725.8,170.357L729.6,165.806L733.4,162.905L737.2,160.892L741,159.411L744.8,158.276L748.6,157.376L752.4,156.644L756.2,156.038L760,155.525L763.8,155.087L767.6,154.706L771.4,154.373L775.2,154.078L779,153.815L782.8,153.579L786.6,153.365L790.4,153.171L794.2,152.993L798,152.829L801.8,152.678L805.6,152.537L809.4,152.407L813.2,152.285L817,152.17L820.8,152.062L824.6,151.961L828.4,151.864L832.2,151.773L836,151.686L839.8,151.603L843.6,151.524L847.4,151.448L851.2,151.375L855,151.304L858.8,151.237L862.6,151.171L866.4,151.108L870.2,151.047L874,150.987L877.8,150.929L881.6,150.873L885.4,150.817L889.2,150.764L893,150.711L896.8,150.659L900.6,150.608L904.4,150.558L908.2,150.509L912,150.461L915.8,150.413L919.6,150.366L923.4,150.319L927.2,150.273L931,150.227L934.8,150.181L938.6,150.136L942.4,150.09L946.2,150.045"
                    data-testid="Line-Series-3"
                    style="stroke: darkkhaki; stroke-width: 1px; stroke-opacity: 1; fill: none; display: inherit;"
                  />
                </g>
              </g>
              <rect
                fill="none"
                height="300"
                pointer-events="all"
                width="950"
              />
            </svg>
          </div>
          <div
            class="y-axis-container"
            style="grid-area: yaxis; display: flex; flex-direction: column;"
          >
            <svg
              height="300"
              width="50"
            >
              <g
                class="axis-y axis-y-Collection-1"
                cursor="move"
                transform="translate(0, 0)"
              >
                <g
                  class="axis y-axis"
                  data-testid="yAxis-Collection-1"
                  fill="none"
                  font-size="14"
                  stroke-width="2"
                  text-anchor="start"
                >
                  <path
                    d="M6,299H1V1H6"
                    stroke="darkkhaki"
                  />
                  <g
                    opacity="1"
                    transform="translate(0, 293.6232242671943)"
                  >
                    <line
                      stroke="darkkhaki"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="darkkhaki"
                      x="9"
                      y="1"
                    >
                      -80
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(0, 257.7174182003954)"
                  >
                    <line
                      stroke="darkkhaki"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="darkkhaki"
                      x="9"
                      y="1"
                    >
                      -60
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(0, 221.81161213359644)"
                  >
                    <line
                      stroke="darkkhaki"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="darkkhaki"
                      x="9"
                      y="1"
                    >
                      -40
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(0, 185.9058060667975)"
                  >
                    <line
                      stroke="darkkhaki"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="darkkhaki"
                      x="9"
                      y="1"
                    >
                      -20
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(0, 149.99999999999864)"
                  >
                    <line
                      stroke="darkkhaki"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="darkkhaki"
                      x="9"
                      y="1"
                    >
                      0
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(0, 114.09419393319972)"
                  >
                    <line
                      stroke="darkkhaki"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="darkkhaki"
                      x="9"
                      y="1"
                    >
                      20
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(0, 78.1883878664008)"
                  >
                    <line
                      stroke="darkkhaki"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="darkkhaki"
                      x="9"
                      y="1"
                    >
                      40
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(0, 42.28258179960188)"
                  >
                    <line
                      stroke="darkkhaki"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="darkkhaki"
                      x="9"
                      y="1"
                    >
                      60
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(0, 6.3767757328029635)"
                  >
                    <line
                      stroke="darkkhaki"
                      x1="0"
                      x2="6"
                      y1="1"
                      y2="1"
                    />
                    <text
                      class="tick-value"
                      dy="0.32em"
                      fill="darkkhaki"
                      x="9"
                      y="1"
                    >
                      80
                    </text>
                  </g>
                </g>
                <rect
                  fill="none"
                  height="300"
                  pointer-events="all"
                  width="50"
                />
              </g>
            </svg>
          </div>
          <div
            class="x-axis-container"
            style="grid-area: xaxis; display: flex; flex-direction: row; width: 100%;"
          >
            <div
              style="width: 100%;"
            >
              <svg
                height="50"
                style="width: 100%; display: block;"
                width="950"
              >
                <g
                  class="axis x-axis"
                  data-testid="xAxis"
                  fill="none"
                  font-size="14"
                  stroke-width="2"
                  text-anchor="middle"
                >
                  <path
                    d="M1,6V1H949V6"
                    stroke="black"
                  />
                  <g
                    opacity="1"
                    transform="translate(78.66, 0)"
                  >
                    <line
                      stroke="black"
                      x1="1"
                      x2="1"
                      y2="6"
                    />
                    <text
                      class="tick-value"
                      dy="0.71em"
                      fill="black"
                      x="1"
                      y="9"
                    >
                      02/01
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(160.73999999999998, 0)"
                  >
                    <line
                      stroke="black"
                      x1="1"
                      x2="1"
                      y2="6"
                    />
                    <text
                      class="tick-value"
                      dy="0.71em"
                      fill="black"
                      x="1"
                      y="9"
                    >
                      03/01
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(242.82, 0)"
                  >
                    <line
                      stroke="black"
                      x1="1"
                      x2="1"
                      y2="6"
                    />
                    <text
                      class="tick-value"
                      dy="0.71em"
                      fill="black"
                      x="1"
                      y="9"
                    >
                      04/01
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(324.90000000000003, 0)"
                  >
                    <line
                      stroke="black"
                      x1="1"
                      x2="1"
                      y2="6"
                    />
                    <text
                      class="tick-value"
                      dy="0.71em"
                      fill="black"
                      x="1"
                      y="9"
                    >
                      05/01
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(406.98, 0)"
                  >
                    <line
                      stroke="black"
                      x1="1"
                      x2="1"
                      y2="6"
                    />
                    <text
                      class="tick-value"
                      dy="0.71em"
                      fill="black"
                      x="1"
                      y="9"
                    >
                      06/01
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(489.06000000000006, 0)"
                  >
                    <line
                      stroke="black"
                      x1="1"
                      x2="1"
                      y2="6"
                    />
                    <text
                      class="tick-value"
                      dy="0.71em"
                      fill="black"
                      x="1"
                      y="9"
                    >
                      07/01
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(571.14, 0)"
                  >
                    <line
                      stroke="black"
                      x1="1"
                      x2="1"
                      y2="6"
                    />
                    <text
                      class="tick-value"
                      dy="0.71em"
                      fill="black"
                      x="1"
                      y="9"
                    >
                      08/01
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(653.22, 0)"
                  >
                    <line
                      stroke="black"
                      x1="1"
                      x2="1"
                      y2="6"
                    />
                    <text
                      class="tick-value"
                      dy="0.71em"
                      fill="black"
                      x="1"
                      y="9"
                    >
                      09/01
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(735.3000000000001, 0)"
                  >
                    <line
                      stroke="black"
                      x1="1"
                      x2="1"
                      y2="6"
                    />
                    <text
                      class="tick-value"
                      dy="0.71em"
                      fill="black"
                      x="1"
                      y="9"
                    >
                      10/01
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(817.38, 0)"
                  >
                    <line
                      stroke="black"
                      x1="1"
                      x2="1"
                      y2="6"
                    />
                    <text
                      class="tick-value"
                      dy="0.71em"
                      fill="black"
                      x="1"
                      y="9"
                    >
                      11/01
                    </text>
                  </g>
                  <g
                    opacity="1"
                    transform="translate(899.4599999999999, 0)"
                  >
                    <line
                      stroke="black"
                      x1="1"
                      x2="1"
                      y2="6"
                    />
                    <text
                      class="tick-value"
                      dy="0.71em"
                      fill="black"
                      x="1"
                      y="9"
                    >
                      12/01
                    </text>
                  </g>
                </g>
                <rect
                  fill="none"
                  height="50"
                  pointer-events="all"
                  width="950"
                />
              </svg>
            </div>
          </div>
          <div
            style="grid-area: spacer;"
          />
          <div
            class="context-container"
            style="grid-area: context; display: flex; flex-direction: column;"
          >
            <div
              style="width: 100%;"
            >
              <svg
                height="50"
                style="width: 100%; display: block;"
                width="950"
              >
                <g
                  height="100"
                  width="950"
                >
                  <clippath
                    id="clip-path-950-100-"
                  >
                    <rect
                      fill="none"
                      height="100"
                      width="950"
                    />
                  </clippath>
                </g>
                <g
                  fill="none"
                  stroke="#777"
                >
                  <rect
                    class="before-selection"
                    fill="#777"
                    fill-opacity="0.3"
                    height="100"
                    shape-rendering="crispEdges"
                    stroke="#fff"
                    width="0"
                    x="0"
                    y="0"
                  />
                  <rect
                    class="after-selection"
                    fill="#777"
                    fill-opacity="0.3"
                    height="100"
                    shape-rendering="crispEdges"
                    stroke="#fff"
                    width="0"
                    x="950"
                    y="0"
                  />
                  <rect
                    class="overlay"
                    cursor="crosshair"
                    fill="none"
                    height="100"
                    pointer-events="all"
                    width="950"
                    x="0"
                    y="0"
                  />
                  <rect
                    class="selection"
                    cursor="move"
                    fill="none"
                    fill-opacity="0.3"
                    height="100"
                    pointer-events="all"
                    shape-rendering="crispEdges"
                    width="950"
                    x="0"
                    y="0"
                  />
                  <path
                    class="handle handle--west"
                    d="M 0 0 V 100"
                    stroke="#333"
                    stroke-width="2"
                  />
                  <rect
                    class="handle-target handle-target--west"
                    cursor="ew-resize"
                    fill="none"
                    height="100"
                    pointer-events="all"
                    stroke="none"
                    width="10"
                    x="-5"
                    y="0"
                  />
                  <circle
                    class="handle-target handle-target--west"
                    cursor="ew-resize"
                    cx="-1"
                    cy="25"
                    fill="#333"
                    pointer-events="all"
                    r="8"
                    stroke="#333"
                    stroke-width="2"
                  />
                  <circle
                    class="handle-target handle-target--east"
                    cursor="ew-resize"
                    cx="949"
                    cy="25"
                    fill="#333"
                    pointer-events="all"
                    r="8"
                    stroke="#333"
                    stroke-width="2"
                  />
                  <path
                    class="handle handle--east"
                    d="M 950 0 V 100"
                    stroke="#333"
                    stroke-width="2"
                  />
                  <rect
                    class="handle-target handle-target--east"
                    cursor="ew-resize"
                    fill="none"
                    height="100"
                    pointer-events="all"
                    stroke="none"
                    width="10"
                    x="945"
                    y="0"
                  />
                </g>
              </svg>
              <div
                style="width: 100%;"
              >
                <svg
                  height="50"
                  style="width: 100%; display: block;"
                  width="1"
                >
                  <g
                    class="axis x-axis"
                    data-testid="xAxis"
                    fill="none"
                    font-size="14"
                    stroke-width="2"
                    text-anchor="middle"
                  >
                    <path
                      d="M1,6V1H0V6"
                      stroke="black"
                    />
                    <g
                      opacity="1"
                      transform="translate(0.2556, 0)"
                    >
                      <line
                        stroke="black"
                        x1="1"
                        x2="1"
                        y2="6"
                      />
                      <text
                        class="tick-value"
                        dy="0.71em"
                        fill="black"
                        x="1"
                        y="9"
                      >
                        04/01
                      </text>
                    </g>
                    <g
                      opacity="1"
                      transform="translate(0.8604, 0)"
                    >
                      <line
                        stroke="black"
                        x1="1"
                        x2="1"
                        y2="6"
                      />
                      <text
                        class="tick-value"
                        dy="0.71em"
                        fill="black"
                        x="1"
                        y="9"
                      >
                        11/01
                      </text>
                    </g>
                  </g>
                  <rect
                    fill="none"
                    height="50"
                    pointer-events="all"
                    width="1"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
